testsuite/tests/indexed-types/should_fail/T20521.stderr

T20521.hs:19:9: error:
    • Couldn't match type ‘XFam
                             Constraint (*) (XFam (*) Constraint Float)’
                     with ‘Float’
      Expected: Float
        Actual: C2T (T2C Float)
    • In the expression: x
      In an equation for ‘bad’: bad x = x
